# kibitz

./: .gitignore  README.md  kibitz.ipynb  pyproject.toml
src/kibitz/: __init__.py  nn.py
src/kibitz/lang/: __init__.py  adt.py  lisp.py
src/kibitz/synth/: __init__.py  transformer.py
